[FEAT] update docs
